# R-Type

./: CMakeLists.txt  README  conanfile.txt  include
Client/: Makefile  main.cpp
Client/include/: Button.hpp  Client.h  IEngine.hpp  Mainframe.h  Menu.hpp  Music.hpp  Rtype.h
Client/src/: Button.cpp  Client.cpp  Mainframe.cpp  Menu.cpp  main.cpp
Common/include/: Canva.hpp  ClientActionEnum.h  EntityEnum.h  GameBlock.hpp  GameStateItem.h  Request.h  RequestClientAction.h  RequestEnum.h  RequestGameState.h  RequestNewGame.h  ResponseListGames.h
Common/src/: BasicEntities.cpp  Music.cpp  Request.cpp  RequestGameState.cpp  RequestNewGame.cpp
Jo/: .gitignore  main2.cpp
Jo/Game/src/: Missile.cpp  Obstacle.cpp  main.cpp
Jo/GameEngine/Architechture/include/: BasicDisplay.hpp  MouvementTemplate.hpp
Jo/GameEngine/Architechture/src/: BasicEntities.cpp
JoS/: main3.cpp
JoS/Game/src/: Enemy.cpp  Player.cpp
JoS/GameEngine/Architechture/include/: BasicBlock.hpp  Canva.hpp  MyMusic.hpp  Utility.hpp
JoS/GameEngine/Architechture/src/: BasicDisplay.cpp  Canva.cpp  MouvementTemplate.cpp
Server/include/: Game.h  Server.h
Server/src/: Game.cpp  Server.cpp  main.cpp
docs/: protocol.txt
